# Lima-camera-slseiger

./: CMakeLists.txt  README.md  build-sls.sh  pom.xml  pom_64.xml
include/: SlsEigerCamera.h  SlsEigerCameraFrames.h  SlsEigerCameraThread.h  SlsEigerCompatibility.h  SlsEigerDetInfoCtrlObj.h  SlsEigerDetector.h  SlsEigerImageSize.h  SlsEigerInterface.h  SlsEigerReceiver.h  SlsEigerReceivers.h  SlsEigerSyncCtrlObj.h  SlsEigerTypes.h
slsDetectorPackage/manual/manual-acq/: Makefile  build.sh  build.txt  copy.sh  main.cpp  pom.xml  pom_64.xml
slsDetectorPackage/manual/manual-acq/frames/: SlsEigerCameraFrames.cpp  SlsEigerCameraThread.cpp  SlsEigerCameraThreadTest.h  SlsEigerMain.cpp  StreamNexus.cpp  StreamNexus.h
slsDetectorPackage/settingsdir/eiger-nanoscopium/: eiger_10Gb.config
slsDetectorPackage/settingsdir/eiger-nanoscopium/standard/15700eV/: noise.sn046  noise.sn047
slsDetectorPackage/settingsdir/eiger-nanoscopium/standard/17500eV/: noise.sn046  noise.sn047
slsDetectorPackage/settingsdir/eiger-nanoscopium/standard/22200eV/: noise.sn046  noise.sn047
slsDetectorPackage/settingsdir/eiger-nanoscopium/standard/25300eV/: noise.sn046  noise.sn047
slsDetectorPackage/settingsdir/eiger-nanoscopium/standard/3300eV/: noise.sn046  noise.sn047
slsDetectorPackage/settingsdir/eiger-nanoscopium/standard/4500eV/: noise.sn046  noise.sn047
slsDetectorPackage/settingsdir/eiger-nanoscopium/standard/5400eV/: noise.sn046  noise.sn047
slsDetectorPackage/settingsdir/eiger-nanoscopium/standard/6400eV/: noise.sn046  noise.sn047
slsDetectorPackage/settingsdir/eiger-nanoscopium/standard/8000eV/: noise.sn046  noise.sn047
slsDetectorPackage/settingsdir/eiger-nanoscopium/standard/9900eV/: noise.sn046  noise.sn047
slsDetectorPackage/slsDetectorSoftware/: Makefile  gitInfo.txt
slsDetectorPackage/slsDetectorSoftware/slsDetector/: gitInfoLib.h  slsDetectorUsers.h
slsDetectorPackage/slsReceiverSoftware/: Makefile  gitInfo.txt
slsDetectorPackage/slsReceiverSoftware/include/: gitInfoReceiver.h
src/: SlsEigerCamera.cpp  SlsEigerCameraFrame.cpp  SlsEigerCameraFrames.cpp  SlsEigerCameraThread.cpp  SlsEigerDetInfoCtrlObj.cpp  SlsEigerDetector.cpp  SlsEigerInterface.cpp  SlsEigerReceiver.cpp  SlsEigerReceivers.cpp  SlsEigerSyncCtrlObj.cpp
uml/: class diagram.plantuml  sequence diagram - acquisition - collecting.plantuml  sequence diagram - acquisition - storing.plantuml
